samples/_failures_safe/1761139735_cc6c5a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f2b35cd9.c: In function ‘evaluate_expression’:
./samples/SAFE/__tmp_f2b35cd9.c:167:5: error: expected expression at end of input
  167 |     if (input == NULL || strlen(input) == 0)
      |     ^~
./samples/SAFE/__tmp_f2b35cd9.c:167:5: error: expected declaration or statement at end of input
